# musterdatenkatalog-georeferenzierung

./: .gitignore  Makefile  README.md  gemeinden_map.html  georeferenzierung.py  map.py  merged_gemeinden.geojson  pyproject.toml
scripts/: download_gemeinden_geodaten.py  download_musterdatenkatalog.py
tests/: test_georeferenzierung.py
