[project]
name = "musterdatenkatalog-georeferenzierung"
version = "0.1.0"
description = "Match Musterdatenkatalog municipalities to German boundary data and render a map."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium",
    "geopandas",
    "pandas",
]

[dependency-groups]
dev = [
    "pytest",
]
